update code of group